--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -17,12 +17,14 @@ CC = gcc
 CCFLAGS = -Wall -Wextra -Werror
 
 NAME = libft.a
-SRC = $(wildcard ft_*.c)
+SRC =	ft_memset.c ft_bzero.c ft_strlen.c ft_atoi.c ft_isdigit.c ft_isalpha.c\
+ft_isprint.c ft_isascii.c ft_isalnum.c ft_memchr.c ft_memcpy.c ft_striteri.c\
+ft_memcmp.c ft_memmove.c ft_strchr.c ft_strdup.c ft_strlcat.c ft_strlcpy.c\
+ft_strncmp.c ft_toupper.c ft_tolower.c ft_strnstr.c ft_strrchr.c ft_calloc.c\
+ft_putchar_fd.c ft_putstr_fd.c ft_putnbr_fd.c ft_putendl_fd.c ft_substr.c\
+ft_strjoin.c ft_strtrim.c ft_strmapi.c ft_itoa.c ft_split.c 
 OBJ = $(SRC:.c=.o)
 INCLUDE = libft.h
-
-BONUSSRC = $(wildcard ft_*.c) 
-
 
 all: $(NAME)
 
